# Bird-Call-Detection

./: .env  .gitignore  LICENSE  README.md  augment_audio.py  augment_audio_fast.py  data_loader.py  efficientnet_model.py  process_audio.py  pyproject.toml  requirements.txt  resnet_bird_classification.py
deepnet/: pyproject.toml  visualize_architecture.py
deepnet/src/deepnet/: __init__.py  dataset.py  preprocess.py  utils.py
deepnet/src/deepnet/configs/: label_map.json
