
[project]
name = "bird-call-detection"
version = "0.1.0"
description = "Bird call detection using recordings from the Xeno-Canto API"
requires-python = ">=3.14"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.7.0",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scipy>=1.10.0",
    "soundfile>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
