[project]
name = "deepnet"
version = "0.1.0"
description = "Deep CNN for bird call classification from audio spectrograms"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.4.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.15.0",
    "numpy>=1.26.0",
    "matplotlib>=3.7.0",
    "soundfile>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepnet"]
